--- a/src/dbms/sys_docs/class-tree.html
+++ b/src/dbms/sys_docs/class-tree.html
@@ -3,7 +3,7 @@
           "DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Module Hierarchy</title>
+  <title>Class Hierarchy</title>
   <link rel="stylesheet" href="epydoc.css" type="text/css" />
   <script type="text/javascript" src="epydoc.js"></script>
 </head>
@@ -43,7 +43,7 @@
     onclick="toggle_private();">hide&nbsp;private</a>]</span></td></tr>
         <tr><td align="right"><span class="options"
             >[<a href="frames.html" target="_top">frames</a
-            >]&nbsp;|&nbsp;<a href="module-tree.html"
+            >]&nbsp;|&nbsp;<a href="class-tree.html"
             target="_top">no&nbsp;frames</a>]</span></td></tr>
       </table>
     </td>
@@ -53,9 +53,31 @@
  [ <a href="module-tree.html">Module Hierarchy</a>
  | <a href="class-tree.html">Class Hierarchy</a> ]
 </b></center><br />
-<h1 class="epydoc">Module Hierarchy</h1>
+<h1 class="epydoc">Class Hierarchy</h1>
 <ul class="nomargin-top">
-    <li> <strong class="uidlink"><a href="queryprocessor-module.html">queryprocessor</a></strong>    </li>
+    <li> <strong class="uidlink"><a href="queryprocessor.QueryProcessor-class.html">queryprocessor.QueryProcessor</a></strong>
+    </li>
+    <li> <strong class="uidlink"><a href="queryprocessor.QueryResult-class.html">queryprocessor.QueryResult</a></strong>
+    </li>
+    <li> <strong class="uidlink">object</strong>:
+      <em class="summary">The most base type</em>
+    <ul>
+    <li> <strong class="uidlink">exceptions.BaseException</strong>:
+      <em class="summary">Common base class for all exceptions</em>
+    <ul>
+    <li> <strong class="uidlink">exceptions.Exception</strong>:
+      <em class="summary">Common base class for all non-exit exceptions.</em>
+    <ul>
+    <li> <strong class="uidlink"><a href="queryprocessor.QueryProcessorException-class.html">queryprocessor.QueryProcessorException</a></strong>
+    </li>
+    <li> <strong class="uidlink"><a href="queryprocessor.QueryResultException-class.html">queryprocessor.QueryResultException</a></strong>
+    </li>
+    </ul>
+    </li>
+    </ul>
+    </li>
+    </ul>
+    </li>
 </ul>
 <!-- ==================== NAVIGATION BAR ==================== -->
 <table class="navbar" border="0" width="100%" cellpadding="0"
