--- a/src/dbms/sys_docs/redirect.html
+++ b/src/dbms/sys_docs/redirect.html
@@ -7,7 +7,7 @@
 <body>
 <script type="text/javascript">
 <!--
-var pages = ["sys-m"];
+var pages = ["queryprocessor.QueryProcessorException-c", "queryprocessor.QueryResultException-c", "queryprocessor.QueryProcessor-c", "queryprocessor.QueryResult-c", "queryprocessor-m"];
 var dottedName = get_anchor();
 if (dottedName) {
     var target = redirect_url(dottedName);
