--- a/src/dbms/sys_docs/toc-everything.html
+++ b/src/dbms/sys_docs/toc-everything.html
@@ -12,82 +12,14 @@
       alink="#204080">
 <h1 class="toc">Everything</h1>
 <hr />
-  <h2 class="toc">All Functions</h2>
-  <div class="private">
-    <a target="mainFrame" href="sys-module.html#_clear_type_cache"
-     >sys._clear_type_cache</a><br />  </div>
-  <div class="private">
-    <a target="mainFrame" href="sys-module.html#_current_frames"
-     >sys._current_frames</a><br />  </div>
-  <div class="private">
-    <a target="mainFrame" href="sys-module.html#_getframe"
-     >sys._getframe</a><br />  </div>
-    <a target="mainFrame" href="sys-module.html#call_tracing"
-     >sys.call_tracing</a><br />    <a target="mainFrame" href="sys-module.html#callstats"
-     >sys.callstats</a><br />    <a target="mainFrame" href="sys-module.html#displayhook"
-     >sys.displayhook</a><br />    <a target="mainFrame" href="sys-module.html#exc_clear"
-     >sys.exc_clear</a><br />    <a target="mainFrame" href="sys-module.html#exc_info"
-     >sys.exc_info</a><br />    <a target="mainFrame" href="sys-module.html#excepthook"
-     >sys.excepthook</a><br />    <a target="mainFrame" href="sys-module.html#exit"
-     >sys.exit</a><br />    <a target="mainFrame" href="sys-module.html#getcheckinterval"
-     >sys.getcheckinterval</a><br />    <a target="mainFrame" href="sys-module.html#getdefaultencoding"
-     >sys.getdefaultencoding</a><br />    <a target="mainFrame" href="sys-module.html#getdlopenflags"
-     >sys.getdlopenflags</a><br />    <a target="mainFrame" href="sys-module.html#getfilesystemencoding"
-     >sys.getfilesystemencoding</a><br />    <a target="mainFrame" href="sys-module.html#getprofile"
-     >sys.getprofile</a><br />    <a target="mainFrame" href="sys-module.html#getrecursionlimit"
-     >sys.getrecursionlimit</a><br />    <a target="mainFrame" href="sys-module.html#getrefcount"
-     >sys.getrefcount</a><br />    <a target="mainFrame" href="sys-module.html#getsizeof"
-     >sys.getsizeof</a><br />    <a target="mainFrame" href="sys-module.html#gettrace"
-     >sys.gettrace</a><br />    <a target="mainFrame" href="sys-module.html#setcheckinterval"
-     >sys.setcheckinterval</a><br />    <a target="mainFrame" href="sys-module.html#setdlopenflags"
-     >sys.setdlopenflags</a><br />    <a target="mainFrame" href="sys-module.html#setprofile"
-     >sys.setprofile</a><br />    <a target="mainFrame" href="sys-module.html#setrecursionlimit"
-     >sys.setrecursionlimit</a><br />    <a target="mainFrame" href="sys-module.html#settrace"
-     >sys.settrace</a><br />  <h2 class="toc">All Variables</h2>
-    <a target="mainFrame" href="sys-module.html#__package__"
-     >sys.__package__</a><br />    <a target="mainFrame" href="sys-module.html#__stderr__"
-     >sys.__stderr__</a><br />    <a target="mainFrame" href="sys-module.html#__stdin__"
-     >sys.__stdin__</a><br />    <a target="mainFrame" href="sys-module.html#__stdout__"
-     >sys.__stdout__</a><br />  <div class="private">
-    <a target="mainFrame" href="sys-module.html#_mercurial"
-     >sys._mercurial</a><br />  </div>
-  <div class="private">
-    <a target="mainFrame" href="sys-module.html#_multiarch"
-     >sys._multiarch</a><br />  </div>
-    <a target="mainFrame" href="sys-module.html#api_version"
-     >sys.api_version</a><br />    <a target="mainFrame" href="sys-module.html#argv"
-     >sys.argv</a><br />    <a target="mainFrame" href="sys-module.html#builtin_module_names"
-     >sys.builtin_module_names</a><br />    <a target="mainFrame" href="sys-module.html#byteorder"
-     >sys.byteorder</a><br />    <a target="mainFrame" href="sys-module.html#copyright"
-     >sys.copyright</a><br />    <a target="mainFrame" href="sys-module.html#dont_write_bytecode"
-     >sys.dont_write_bytecode</a><br />    <a target="mainFrame" href="sys-module.html#exc_type"
-     >sys.exc_type</a><br />    <a target="mainFrame" href="sys-module.html#exec_prefix"
-     >sys.exec_prefix</a><br />    <a target="mainFrame" href="sys-module.html#executable"
-     >sys.executable</a><br />    <a target="mainFrame" href="sys-module.html#flags"
-     >sys.flags</a><br />    <a target="mainFrame" href="sys-module.html#float_info"
-     >sys.float_info</a><br />    <a target="mainFrame" href="sys-module.html#float_repr_style"
-     >sys.float_repr_style</a><br />    <a target="mainFrame" href="sys-module.html#hexversion"
-     >sys.hexversion</a><br />    <a target="mainFrame" href="sys-module.html#long_info"
-     >sys.long_info</a><br />    <a target="mainFrame" href="sys-module.html#maxint"
-     >sys.maxint</a><br />    <a target="mainFrame" href="sys-module.html#maxsize"
-     >sys.maxsize</a><br />    <a target="mainFrame" href="sys-module.html#maxunicode"
-     >sys.maxunicode</a><br />    <a target="mainFrame" href="sys-module.html#meta_path"
-     >sys.meta_path</a><br />    <a target="mainFrame" href="sys-module.html#modules"
-     >sys.modules</a><br />    <a target="mainFrame" href="sys-module.html#path"
-     >sys.path</a><br />    <a target="mainFrame" href="sys-module.html#path_hooks"
-     >sys.path_hooks</a><br />    <a target="mainFrame" href="sys-module.html#path_importer_cache"
-     >sys.path_importer_cache</a><br />    <a target="mainFrame" href="sys-module.html#platform"
-     >sys.platform</a><br />    <a target="mainFrame" href="sys-module.html#prefix"
-     >sys.prefix</a><br />    <a target="mainFrame" href="sys-module.html#py3kwarning"
-     >sys.py3kwarning</a><br />    <a target="mainFrame" href="sys-module.html#pydebug"
-     >sys.pydebug</a><br />    <a target="mainFrame" href="sys-module.html#stderr"
-     >sys.stderr</a><br />    <a target="mainFrame" href="sys-module.html#stdin"
-     >sys.stdin</a><br />    <a target="mainFrame" href="sys-module.html#stdout"
-     >sys.stdout</a><br />    <a target="mainFrame" href="sys-module.html#subversion"
-     >sys.subversion</a><br />    <a target="mainFrame" href="sys-module.html#version"
-     >sys.version</a><br />    <a target="mainFrame" href="sys-module.html#version_info"
-     >sys.version_info</a><br />    <a target="mainFrame" href="sys-module.html#warnoptions"
-     >sys.warnoptions</a><br /><hr />
+  <h2 class="toc">All Classes</h2>
+    <a target="mainFrame" href="queryprocessor.QueryProcessor-class.html"
+     >queryprocessor.QueryProcessor</a><br />    <a target="mainFrame" href="queryprocessor.QueryProcessorException-class.html"
+     >queryprocessor.QueryProcessorException</a><br />    <a target="mainFrame" href="queryprocessor.QueryResult-class.html"
+     >queryprocessor.QueryResult</a><br />    <a target="mainFrame" href="queryprocessor.QueryResultException-class.html"
+     >queryprocessor.QueryResultException</a><br />  <h2 class="toc">All Variables</h2>
+    <a target="mainFrame" href="queryprocessor-module.html#__package__"
+     >queryprocessor.__package__</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
