--- a/src/dbms/sys_docs/toc-queryprocessor-module.html
+++ b/src/dbms/sys_docs/toc-queryprocessor-module.html
@@ -3,21 +3,24 @@
           "DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Table of Contents</title>
+  <title>queryprocessor</title>
   <link rel="stylesheet" href="epydoc.css" type="text/css" />
   <script type="text/javascript" src="epydoc.js"></script>
 </head>
 
 <body bgcolor="white" text="black" link="blue" vlink="#204080"
       alink="#204080">
-<h1 class="toc">Table&nbsp;of&nbsp;Contents</h1>
+<h1 class="toc">Module queryprocessor</h1>
 <hr />
-  <a target="moduleFrame" href="toc-everything.html">Everything</a>
-  <br />
-  <h2 class="toc">Modules</h2>
-    <a target="moduleFrame" href="toc-queryprocessor-module.html"
-     onclick="setFrame('toc-queryprocessor-module.html','queryprocessor-module.html');"     >queryprocessor</a><br /><hr />
-  <span class="options">[<a href="javascript:void(0);" class="privatelink"
+  <h2 class="toc">Classes</h2>
+    <a target="mainFrame" href="queryprocessor.QueryProcessor-class.html"
+     >QueryProcessor</a><br />    <a target="mainFrame" href="queryprocessor.QueryProcessorException-class.html"
+     >QueryProcessorException</a><br />    <a target="mainFrame" href="queryprocessor.QueryResult-class.html"
+     >QueryResult</a><br />    <a target="mainFrame" href="queryprocessor.QueryResultException-class.html"
+     >QueryResultException</a><br />  <h2 class="toc">Variables</h2>
+    <a target="mainFrame" href="queryprocessor-module.html#__package__"
+     >__package__</a><br /><hr />
+<span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
 <script type="text/javascript">
